--- a/views/cats.handlebars
+++ b/views/cats.handlebars
@@ -1,136 +1,52 @@
     <main class="main">
         <div class="main__location">
             <h4 class="main__location_title">Enter your Location</h4>
-            <form class="main__location_form flex">
+            <form class="main__location_form">
                 <input type="text" class="main__location_form_input" id="location" name="location" placeholder="Enter your zipcode here">
                 <button class="main__location_form_button flex" type="submit">
-                    <img src="images/search-button.png" alt="search" height="20px" class="main__location_form_button-img">
+                    <img src="../images/search-button.png" alt="search" height="20px" class="main__location_form_button-img">
                 </button>
             </form>
         </div>
-        <div class="main__page-title"></div>
-        <div class="main__cards-container flex"></div>
+        {{#if cats}}
+        <h3>Available Cats Near {{zipcode}}</h3>
+        <div class="cards__container">
+            {{#each cats}}
+            <div class="card">
+                <img src="
+                    {{#if this.primary_photo_cropped}}
+                        {{this.primary_photo_cropped.full}}
+                    {{else}}
+                        ../images/placeholder-img.png
+                    {{/if}}" 
+                    alt="{{this.name}}" width="300" class="card-img">
+                <p class="card-info">Name: {{this.name}}</p>
+                <p class="card-info">Age Group: {{this.age}}</p>
+                <p class="card-info">Gender: {{this.gender}}</p>
+                <p class="card-info">Distance: {{this.distance}}</p>
+            {{/each}}
+            </div>
+        </div>
+        {{else}}
+        <h5>{{error.message}}</h5>
+        {{/if}}
     </main>
 
 <script>
-    const clientId = "GiSioqvTD4tdsfeNRgjcQstuUR4V1aN2P3sY1I32C6dF2MGdLX"
-    const clientSecret = "uY0TDw81TXWq3X4aUHuoga5loTu1wKqHNkusbb2M"
-    const TOKEN_URL = "https://api.petfinder.com/v2/oauth2/token"
-    const API_URL = `https://api.petfinder.com/v2/animals?sort=-distance&type=cat`
-
     const form = document.querySelector(".main__location_form")
-    const catCardsContainer = document.querySelector(".main__cards-container")
-    const catPageTitleContainer = document.querySelector(".main__page-title")
 
     form.onsubmit = function(e) {
         e.preventDefault()
         let zipcode = form.location.value.trim()
+        console.log(zipcode)
         if(!zipcode || !(checkZipcodeFormat(zipcode))) {
-            form.location.value = ""
-            catCardsContainer.innerHTML = `<h5> Location not found... Please try another zipcode</h5>`
-            catPageTitleContainer.innerHTML = ""
+            form.zipcode.value = ""
             return
         } else {
-            localStorage.setItem('user-zipcode', zipcode)
+            localStorage.setItem('zipcode', zipcode)
         }
         form.location.value = ""
-        fetchApiInfo(zipcode)
-    }
-
-    
-    function fetchApiInfo(zipcode) {
-        fetch(TOKEN_URL, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded'
-            },
-            body: `grant_type=client_credentials&client_id=${clientId}&client_secret=${clientSecret}`
-        })
-        .then(function(res) {
-            if (!res.ok) {
-                throw new Error('No Token Found')
-            }
-            return res.json()
-        })
-        .then(function(data) {
-            const accessToken = data.access_token
-
-            return fetch(`${API_URL}&location=${zipcode}`, {
-                method: 'GET',
-                headers: {
-                    "Content-Type": "application/vnd.api+json",
-                    "Authorization": `Bearer ${accessToken}`
-                }
-            })
-        })
-        .then(function(res) {
-            if (!res.ok) {
-                throw new Error('No Data Found')
-            }
-            return res.json()
-        })
-        .then(renderCats)
-        .catch(function(err) {
-            console.log(err.message)
-        }) 
-    }
-
-    function renderCats(catData) {
-        const catDataArray = Array.from(catData.animals)
-
-        {{!-- Resets Cards --}}
-        catPageTitleContainer.innerHTML = ""
-        catCardsContainer.innerHTML = ""
-
-        {{!-- Location Title --}}
-        zipcode = localStorage.getItem('user-zipcode')
-        const catPageTitle = document.createElement('h3')
-        catPageTitle.textContent = `Cats Available Near ${zipcode}`
-        catPageTitleContainer.appendChild(catPageTitle)
-
-        {{!-- Animal Cards --}}
-        for (let catNum = 0; catNum < catDataArray.length; catNum++) {
-            {{!-- creates card for each cat --}}
-
-            let card = catDataArray[catNum]
-            card = document.createElement('div')
-            card.className = "main__cards-container_card"
-            catCardsContainer.appendChild(card)
-
-            {{!-- Creates imgs --}}
-
-            let catPic = document.createElement('img')
-            catPic.className = "main__cards-container_card-img"
-            if(catDataArray[catNum].primary_photo_cropped === null) {
-                catPic.src = "../images/placeholder-img.png"
-            } else {
-                catPic.src = catDataArray[catNum].primary_photo_cropped.full
-            }
-            catPic.width = "300"
-            catPic.alt = catDataArray[catNum].name
-            card.appendChild(catPic)
-
-            {{!-- creates name --}}
-
-            catName = document.createElement('p')
-            catName.textContent = "Name: " + catDataArray[catNum].name
-            catName.className = "main__cards-container_card-info"
-            card.appendChild(catName)
-
-            {{!-- creates age group --}}
-
-            catAgeGroup = document.createElement('p')
-            catAgeGroup.textContent = "Age Group: " + catDataArray[catNum].age
-            catAgeGroup.className = "main__cards-container_card-info"
-            card.appendChild(catAgeGroup)
-
-            {{!-- creates gender --}}
-
-            let catGender = document.createElement('p')
-            catGender.textContent = "Gender: " + catDataArray[catNum].gender
-            catGender.className = "main__cards-container_card-info"
-            card.appendChild(catGender)
-        }
+        window.location.href=`/cats/${zipcode}`
     }
 
     {{!-- Checks Zipcode Format --}}
