--- a/views/dogs.handlebars
+++ b/views/dogs.handlebars
@@ -27,12 +27,21 @@
             {{/each}}
             </div>
         </div>
+
+        <div class="pagination">
+            <button id="prev-page" {{#if (isEqual currentPage 1)}}disabled{{/if}}>Previous</button>
+            <span>Page {{currentPage}} of {{totalPages}}</span>
+            <button id="next-page" {{#if (isEqual currentPage totalPages)}}disabled{{/if}}>Next</button>
+        </div>
+
         {{else}}
-        <h5>{{error.message}}</h5>
+        <h5>{{error}}</h5>
         {{/if}}
     </main>
 
 <script>
+    const prevPageBtn = document.getElementById('prev-page')
+    const nextPageBtn = document.getElementById('next-page')
     const form = document.querySelector(".main__location_form")
 
     form.onsubmit = function(e) {
@@ -53,4 +62,22 @@
     const checkZipcodeFormat = (str) => {
     return /^\d{5}(-\d{4})?$/.test(str);
     }
+
+    prevPageBtn.onclick = function() {
+        navigatePage(-1)
+    }
+
+    nextPageBtn.onclick = function() {
+        navigatePage(1)
+    }
+
+    function navigatePage(step) {
+        const CURRENT_URL = new URL(window.location.href)
+        const currentPage = parseInt(CURRENT_URL.searchParams.get('page')) || 1
+        const newPage = currentPage + step
+
+        CURRENT_URL.searchParams.set("page", newPage)
+        window.location.href = CURRENT_URL.toString()
+    }
+
 </script>
