--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,13 @@
     <main class="main">
-        <section class="main__hero flex">
-            <h1 class="main__hero__call-to-action">In the market for a new furry friend?</h1>
-            <h2 class="main__hero__call-to-action">Check out cats and dogs available for adoption!</h2>
-            <a class="main__hero__call-to-action__button" href="#adoption-icon" style="background: url(images/arrow-icon.png)"></a>
+        <section class="main__hero">
+            <h1 class="main__hero__cta">In the market for a new furry friend?</h1>
+            <h2 class="main__hero__cta">Check out cats and dogs available for adoption!</h2>
+            <a class="main__hero__cta__button" href="#adoption-icon" style="background: url(../images/arrow-icon.png)"></a>
         </section>
 
-        <section class="main__pet-adoption flex" id="adoption-icon">
+        <section class="main__pet-adoption" id="adoption-icon">
             <h3 class ="main__pet-adoption_title">Pets Available for Adoption</h3>
-            <div class="main__pet__adoption-img_container flex">
+            <div class="main__pet__adoption-img_container">
                 <a class="main__cat_link" href="/cats">
                     <img src="images/cat-button-orange.png" alt="cat-icon" class="main__link_img-cat" width="100"> 
                 </a>
@@ -17,9 +17,9 @@
             </div>
         </section>
 
-        <section class="main__pet__facts flex">
+        <section class="main__pet__facts">
             <div class="main__pet__facts_container" id = facts_container>
-                <img src="../images/cat-facts-img.jpg" alt="cat-picture" class="main__facts_img" width="300px">
+                <img src="../images/cat-facts-img.jpg" alt="cat-picture" class="main__facts_img">
                 <div class="main__pet__facts__div" id = factsDiv>
                     <h3 class="main__pet__facts_text">Did You Know?</h3>
                     <h4 class="main__pet__facts_api" id="main__facts"></h4>
