--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer__content flex">
-        <div class="footer__content_social-media flex">
+        <div class="footer__content_social-media">
             <p>Connect with us:</p>
             <a class="footer__content_social-media_link" href="https://www.instagram.com/accounts/login/?hl=en" target="__BLANK">
                 <img class="footer__content_social-media_icon" width="36px" height="36px" src="../images/instagram.png" alt="link the instagram">
@@ -12,7 +12,7 @@
                 <img class="footer__content_social-media_icon" width="36px" height="36px" src="../images/twitter.png" alt="link to x or twitter">
             </a>
         </div>
-        <div class="footer__content_copyright flex">
+        <div class="footer__content_copyright">
             <p>&copy; Kylee's Designs 2024</p>
         </div>
     </div>
