--- a/views/cats.handlebars
+++ b/views/cats.handlebars
@@ -9,10 +9,11 @@
             </form>
         </div>
         {{#if cats}}
-        <h3>Available Cats Near {{zipcode}}</h3>
+        <h3 class="cards-title">Available Cats Near {{zipcode}}</h3>
         <div class="cards__container">
             {{#each cats}}
             <div class="card">
+                <a>Favorite</a>
                 <img src="
                     {{#if this.primary_photo_cropped}}
                         {{this.primary_photo_cropped.full}}
@@ -20,12 +21,14 @@
                         ../images/placeholder-img.png
                     {{/if}}" 
                     alt="{{this.name}}" width="300" class="card-img">
-                <p class="card-info">Name: {{this.name}}</p>
-                <p class="card-info">Age Group: {{this.age}}</p>
-                <p class="card-info">Gender: {{this.gender}}</p>
-                <p class="card-info">Distance: {{this.distance}}</p>
+                    <div class="card-info-container">
+                        <p class="card-info">Name: {{this.name}}</p>
+                        <p class="card-info">Age Group: {{this.age}}</p>
+                        <p class="card-info">Gender: {{this.gender}}</p>
+                        <p class="card-info">Distance: {{this.distance}}</p>
+                    </div>
+                </div>
             {{/each}}
-            </div>
         </div>
 
         <div class="pagination">
@@ -45,6 +48,7 @@
     const form = document.querySelector(".main__location_form")
     const prevPageBtn = document.getElementById('prev-page')
     const nextPageBtn = document.getElementById('next-page')
+
 
     form.onsubmit = function(e) {
         e.preventDefault()
