--- a/views/dogs.handlebars
+++ b/views/dogs.handlebars
@@ -13,6 +13,7 @@
         <div class="cards__container">
             {{#each dogs}}
             <div class="card">
+                <a href="">Favorite</a>
                 <img src="
                     {{#if this.primary_photo_cropped}}
                         {{this.primary_photo_cropped.full}}
@@ -20,12 +21,14 @@
                         ../images/placeholder-img.png
                     {{/if}}" 
                     alt="{{this.name}}" width="300" class="card-img">
-                <p class="card-info">Name: {{this.name}}</p>
-                <p class="card-info">Age Group: {{this.age}}</p>
-                <p class="card-info">Gender: {{this.gender}}</p>
-                <p class="card-info">Distance: {{this.distance}}</p>
-            {{/each}}
+                <div class="card-info-container">
+                    <p class="card-info">Name: {{this.name}}</p>
+                    <p class="card-info">Age Group: {{this.age}}</p>
+                    <p class="card-info">Gender: {{this.gender}}</p>
+                    <p class="card-info">Distance: {{this.distance}}</p>
+                </div>
             </div>
+            {{/each}}
         </div>
 
         <div class="pagination">
