--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,18 @@
-<main>
-  <h1>Login</h1>
-  <form class="login-form" action="/api/login" method="POST">
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username">
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    {{#if error}}
-      <p class="login-error">{{error}}</p>
-    {{/if}}
-    <button class="btn">Login</button>
-  </form>
-  <p>Don't have an account? 
-    <a href="/signup">Sign-up here!</a>
-  </p>
+<main class=".main">
+  <h2 class="login-title">Login</h2>
+  <div class="login-container">
+    <form class="login-form" action="/api/login" method="POST">
+      <label for="username">Username:</label>
+      <input type="text" name="username" id="username">
+      <label for="password">Password:</label>
+      <input type="password" name="password" id="password" required>
+      {{#if error}}
+        <p class="login-error">{{error}}</p>
+      {{/if}}
+      <button class="btn">Login</button>
+    </form>
+    <p>Don't have an account? 
+      <a href="/signup">Sign-up here!</a>
+    </p>
+  </div>
 </main>
