--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,13 +1,18 @@
 <main>
-  <h1>Create an Account</h1>
-  <form class="login-form" action="/api/signup" method="POST">
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username">
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    {{#if error}}
-      <p class="login-error">{{error}}</p>
-    {{/if}}
-    <button class="btn">Create Account</button>
-  </form>
+  <h2 class="login-title">Create an Account</h2>
+  <div class="login-container">
+    <form class="login-form" action="/api/signup" method="POST">
+      <label for="username">Username</label>
+      <input type="text" name="username" id="username">
+      <label for="password">Password</label>
+      <input type="password" name="password" id="password" required>
+      {{#if error}}
+        <p class="login-error">{{error}}</p>
+      {{/if}}
+      <button class="btn">Create Account</button>
+    </form>
+    <p>Have an account? 
+      <a href="/login">Login here!</a>
+    </p>
+  </div>
 </main>
