--- a/public/style.css
+++ b/public/style.css
@@ -46,6 +46,11 @@ h5 {
   font-weight: 500;
 }
 
+p {
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .main {
   min-height: 100vh;
 }
@@ -483,15 +488,16 @@ h5 {
 .card {
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  /* padding: 1px 0; */
   background-color: var(--primary);
-  border-radius: 10px;
+  border-radius: 20px;
   text-wrap: wrap;
   width: 275px;
-  height: 375px;
+  height: auto;
   text-align: center;
   justify-content: center;
   align-items: center;
+  border: var(--primary) solid 2px;
 }
 
 /* .main__cards-container_card-name {
@@ -499,26 +505,62 @@ h5 {
   padding: 0 0 15px 0;
 } */
 
+.animal-name {
+  background-color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 0 10px 0;
+  color: var(--primary);
+
+}
+
 .card-img {
-  height: 175px;
-  width: 200px;
+  height: 200px;
+  width: 100%;
   object-fit: cover;
   object-position: center;
-  border: var(--white) solid 2px;
+  border-radius: 20px 20px 0 0;
+  /* border: var(--white) solid 2px; */
 }
 
 .card-info-container {
-  padding: 15px 0 5px 0;
-  color: var(--white);
+  width: 100%;
+  color: var(--text);
+  background-color: var(--white);
+  border-radius: 0 0 20px 20px;
 }
 
-/* .card:hover {
+.card-info-animal {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: -20px;
+  margin:  0 55px -15px;
+}
+
+.info-divider {
+  background-color: var(--primary);
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+}
+
+.card-info-location {
+  color: var(--primary);
+  font-size: 14px;
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+
+.card:hover {
   background-color: var(--secondary);
+  border-color: var(--secondary);
   scale: .99;
   transition: 0.4s;
   cursor: pointer;
   z-index: 0;
-} */
+}
 
 .pagination {
   display: flex;
@@ -540,6 +582,97 @@ h5 {
   border: var(--secondary) solid 2px;
   transform: scale(.98);
   cursor: pointer;
+}
+
+/* Individual Pet Page */
+
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  height: 600px;
+  position: relative;
+  background-color: #222222;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+  margin: 0 auto;
+}
+
+.mySlides > img {
+  object-fit: cover;
+  object-position: center;
+  max-width: 1000px;
+  height: 600px;
+}
+
+/* Next & previous buttons */
+.prevImage, .nextImage {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin: -22px 14px 0 14px;
+  padding: 16px;
+  color: var(--white);
+  font-weight: bold;
+  font-size: 22px;
+  transition: 0.6s ease;
+  border-radius: 3px;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.nextImage {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prevImage:hover, .nextImage:hover {
+  background-color: #111111;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: var(--white);
+  font-size: 16px;
+  padding: 12px 16px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dots-container {
+  display: flex;
+  justify-content: center;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 5px 4px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 /* Login & Sign-up Page */
