--- a/public/style.css
+++ b/public/style.css
@@ -22,14 +22,14 @@ h1 {
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 32px;
   font-weight: 500px;
   margin: 0 100px;
 }
 
 h3 {
   margin: 25px 100px;
-  font-size: 32px;
+  font-size: 28px;
   color: var(--text);
   font-weight: 600;
   padding-top: 20px;
@@ -693,6 +693,10 @@ p {
 .dots-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  background-color: var(--primary);
+  height: 70px;
+  margin-top: -5px;
 }
 
 .dot {
@@ -700,14 +704,14 @@ p {
   height: 15px;
   width: 15px;
   margin: 5px 4px;
-  background-color: #bbb;
+  background-color: #bebebe;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: var(--white);
 }
 
 /* Fading animation */
@@ -716,8 +720,66 @@ p {
   animation-duration: 1.5s;
 }
 
-/* Login & Sign-up Page */
+.animal-info {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
+.animal-info > h2 {
+  color: var(--primary);
+  margin-top: 70px;
+}
+
+.information {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 15px;
+}
+
+.information:nth-child(3) {
+  margin-bottom: 20px;
+}
+
+.divider {
+  width: 8px;
+  height: 4px;
+  background-color: var(--primary);
+  border-radius: 3px;
+}
+
+.small-divider {
+  width: 6px;
+  height: 3px;
+  background-color: var(--primary);
+  border-radius: 3px;
+}
+
+.animal-nav {
+  display: flex;
+  border-bottom: var(--primary) solid 2px;
+  border-top: var(--primary) solid 2px;
+  text-decoration: none;
+  color: var(--primary);
+}
+
+.animal-nav-link {
+  text-decoration: none;
+  color: var(--primary);
+  padding: 20px 30px;
+}
+
+.animal-nav > a:hover, .animal-nav > a:focus {
+  background-color: var(--primary);
+  color: var(--white);
+  transition: 0.2s;
+}
+
+.animal-nav-link.active {
+  background-color: var(--primary);
+  color: var(--white);
+}
 
 /* Favorites Page */
 
